[package]
name = "runic"
version = "0.8.3"
authors = ["Andrew Palmer <andrew.pa@outlook.com>"]
edition = "2018"

[dependencies]
winit = "0.22"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase", "d2d1" ] }

[target.'cfg(target_os="macos")'.dependencies]
objc = "0.2"
cocoa = "0.23"

[target.'cfg(any(target_os="macos", target_os="linux"))'.dependencies]
cairo-sys-rs = "0.10"
pango-sys = "0.10"
pangocairo-sys = "0.11"
gobject-sys = "0.10"

[target.'cfg(target_os="linux")'.dependencies]
x11-dl = { version = "2.15", optional = true }
servo-egl = { version = "0.2", optional = true }
wayland-sys = { version = "0.27", optional = true, features = ["client", "egl", "dlopen"] }

[features]
default = ["wayland", "x11"]
x11 = ["x11-dl"]
wayland = ["servo-egl", "wayland-sys"]
